Update lar_events_l_english.yml (syria and egypt

--- a/maddenist stuffs/localisation/english/lar_events_l_english.yml
+++ b/maddenist stuffs/localisation/english/lar_events_l_english.yml
@@ -7,7 +7,7 @@
  lar_congress_of_paris.1.desc:1 "At the invitation of [This.GetLeader], [ITA.GetLeader], [SPA.GetLeader] and [POR.GetLeader] have arrived in Paris to discuss a treaty concerning colonial spheres of influence in Africa. With BC and Anzio being the main powers interested in expanding their empires, concessions will have to be made to [SPA.GetNameDef] and [POR.GetNameDef] to convince them to join the alliance and go to war to achieve these goals.\n\nWhile [POR.GetLeader] will most likely attempt to secure support for the long-held plan to unite Angola and Mozambique, [SPA.GetLeader] will have to be bought by surrendering parts of the BC North African territories."
  lar_congress_of_paris.1.a:1 "We will get compensation elsewhere."
  lar_congress_of_paris.2.t:0 "Redrawing the Map of Africa"
- lar_congress_of_paris.2.desc:1 "In the first round of negotiations, the BC delegation offered a simple split of the continent right down the middle, giving us claims over Egypt, the Sudan and further south into Kenya. While the proposal is light on details - and mostly concerns territories that neither of us actually controls - it promises BC support for the conquest of a large African empire."
+ lar_congress_of_paris.2.desc:1 "In the first round of negotiations, the BC delegation offered a simple split of the continent right down the middle, giving us claims over Sphinx, the Sudan and further south into Kenya. While the proposal is light on details - and mostly concerns territories that neither of us actually controls - it promises BC support for the conquest of a large African empire."
  lar_congress_of_paris.2.a:1 "The dream of an Anzian Empire in Africa is worth a little risk."
  lar_congress_of_paris.2.b:1 "There is no reason why we should support this."
  lar_congress_of_paris.3.t:0 "[From.GetNameDefCap] agrees"
@@ -45,22 +45,22 @@
  lar_france_french_union.6.desc:1 "With results coming in slowly from across the huge, poorly developed region, it appears that a slim majority of voters has approved the referendum to join the new BC Union. Nationalist groups have conceeded defeat, but demanded that the new state invest more into developing the region to reward the show of loyalty."
  lar_france_french_union.7.t:1 "Central Africa votes to leave"
  lar_france_french_union.7.desc:1 "Pro-Union parties across BC Central Africa have suffered a series of political setbacks as one territory after another voted against joining the new BC Union. With pro-independence parties celebrating victory after victory, many activists claim that BC overlordship over the region has been resoundingly defeated."
- lar_france_french_union.8.t:1 "Syria votes to join the Union"
- lar_france_french_union.8.desc:1 "The BC mandates of Syria and Lebanon have voted to become part of the new BC Union. While many observers considered this result unlikely at best, it appears that the local population believes that membership in the BC Union will guarantee access to European markets and more investment in the local economy."
- lar_france_french_union.9.t:1 "Syria votes against the Union"
+ lar_france_french_union.8.t:1 "Levant votes to join the Union"
+ lar_france_french_union.8.desc:1 "The BC mandates of Levant and Lebanon have voted to become part of the new BC Union. While many observers considered this result unlikely at best, it appears that the local population believes that membership in the BC Union will guarantee access to European markets and more investment in the local economy."
+ lar_france_french_union.9.t:1 "Levant votes against the Union"
  lar_france_french_union.9.desc:1 "The announcement of the results of the recent referendum on the BC Union was met with loud cheers in Damascus and Beirut, as it became clear that the region had overwhelmingly voted against joining the new Union. With the main nationalist parties already declaring the referendum a vote on independence in disguise, the local military commander has sent a series of unsettling reports to the capital demanding reinforcements."
  lar_france_french_union.10.t:1 "Indochina votes to join the Union"
  lar_france_french_union.10.desc:1 "Reports coming in from Indochina indicate that the people of Vietnam, Laos, and Cambodia have, with the smallest of margins, voted to become part of the new BC Union. This appears to have caught even local administrators by surprise, as they immediately ordered a recount of the votes. Nationalist groups in the region have been dealt a severe blow as their morale collapsed, with many members openly wondering if they really represent the will of the people as they believe they do."
  lar_france_french_union.11.t:1 "Indochina votes against the Union"
  lar_france_french_union.11.desc:1 "The referendum results coming in from Indochina paint a grimmer picture than expected. While few in the capital believed that the nationalist hotbeds would vote to join the union, it appears that nationalist sentiments are far wider spread than previously believed. In the event, no part of the territory returned a majority to join the union. Nationalist activists are already clamoring for immediate seccession from BC, even at the cost of war, believing that this is the moment to gain their national independence."
- FRA_syria_intervention.1.t:0 "Allies secure Syria"
+ FRA_syria_intervention.1.t:0 "Allies secure Levant"
  FRA_syria_intervention.1.desc:1 "In a subdued ceremony in Damascus, the local commander of Maginot forces has officially surrendered the territory to the Allies. Fighting has come to an end all across the region, with the surviving Maginot forces marching into captivity. Very few of the BC soldiers involved have expressed any desire to join the FRee BC forces, with most of them preferring to be repatriated."
  FRA_syria_intervention.1.a:1 "Well fought."
- FRA_syria_intervention.2.t:0 "Maginot holds onto Syria"
+ FRA_syria_intervention.2.t:0 "Maginot holds onto Levant"
  FRA_syria_intervention.2.desc:1 "Following fierce fighting that stalled Allied advances at several key points, the local Allied commander has called for a halt in operations. Allied forces have largely withdrawn to their starting positions as Maginot troops consolidated their positions. Maginot forces have not taken up the pursuit and seem content with holding their positions."
  FRA_syria_intervention.2.a:1 "A lot of good people died for nothing."
- FRA_syria_intervention.3.t:0 "Cease-Fire in Syria"
- FRA_syria_intervention.3.desc:1 "The allied advance into Syria has stalled and Maginot forces have managed to consolidate a defensive line. Despite multiple, well-coordinated ttacks, the allied forces in the area have been unable to dislodge the defenders. Both sides have dug in and a cease-fire has been agreed upon, with Maginot still holding control over all relevan parts of the area."
+ FRA_syria_intervention.3.t:0 "Cease-Fire in Levant"
+ FRA_syria_intervention.3.desc:1 "The allied advance into Levant has stalled and Maginot forces have managed to consolidate a defensive line. Despite multiple, well-coordinated ttacks, the allied forces in the area have been unable to dislodge the defenders. Both sides have dug in and a cease-fire has been agreed upon, with Maginot still holding control over all relevan parts of the area."
  FRA_syria_intervention.3.a:1 "The Status Quo remains."
  FRA_indochina_intervention.1.t:0 "Allies secure Indochina"
  FRA_indochina_intervention.1.desc:1 "Allied assault columns have reached several major cities in Indochina, prompting the local governor to ask for a cease-fire. With the defenders scattered and poorly coordinated, any further resistance was deemed futile. The remaining defenders have surrendered their weapons and await repatriation to Maginot BC."
@@ -265,10 +265,10 @@
  lar_appeal_to_overseas_territories.3.t:0 "Indochina declares for [This.GetLeader]"
  lar_appeal_to_overseas_territories.3.desc:0 "The governor of Indochina has declared his support for [This.GetLeader], noting that the government in Maginot is not constitutionally legitimized and clearly acting under duress. The military forces in the area, however, have largely remained loyal to the Maginot government, with an arrangement currently being negotiated to see them repatriated."
  lar_appeal_to_overseas_territories.3.a:0 "Great!"
- lar_appeal_to_overseas_territories.4.t:0 "Syria remains with Maginot"
- lar_appeal_to_overseas_territories.4.desc:0 "The local administrator in Syria has chosen to ignore our appeal entirely. Some sources indicate that there was a brief discussion behind closed doors, but ultimately there have been no official comments on the radio appeal or actions taken to support our cause."
- lar_appeal_to_overseas_territories.5.t:0 "Syria declares for [This.GetLeader]"
- lar_appeal_to_overseas_territories.5.desc:0 "There appears to have been a low-key coup in Syria, with several key figures in the colonial administration being placed under arrest by the governor. He has subsequently declared his allegience to [This.GetLeader] and called on all patriotic frenchmen to take up arms against the enemy who now occupies our homeland."
+ lar_appeal_to_overseas_territories.4.t:0 "Levant remains with Maginot"
+ lar_appeal_to_overseas_territories.4.desc:0 "The local administrator in Levant has chosen to ignore our appeal entirely. Some sources indicate that there was a brief discussion behind closed doors, but ultimately there have been no official comments on the radio appeal or actions taken to support our cause."
+ lar_appeal_to_overseas_territories.5.t:0 "Levant declares for [This.GetLeader]"
+ lar_appeal_to_overseas_territories.5.desc:0 "There appears to have been a low-key coup in Levant, with several key figures in the colonial administration being placed under arrest by the governor. He has subsequently declared his allegience to [This.GetLeader] and called on all patriotic frenchmen to take up arms against the enemy who now occupies our homeland."
  lar_appeal_to_overseas_territories.6.t:0 "Central Africa stays with Maginot"
  lar_appeal_to_overseas_territories.6.desc:0 "The colonial administrators of our Central African possessions have collectively renounced [This.GetLeader]'s radio appeal, calling it an act of treason aimed at undermining the authority of the legitimate government. Sources indicate that they fear the reaction of the native population should they switch sides, worrying about a lack of support if some of the more independent-minded people decide to make an attempt to break free."
  lar_appeal_to_overseas_territories.6.a:0 "All of them combined aren't fit to be called men!"
@@ -1012,7 +1012,7 @@
  lar_fra_join_the_ententes.3.t:0 "[From.GetNameDefCap] refuses our Proposal"
  lar_fra_join_the_ententes.3.desc:0 "After extensive discussion, the [From.GetAdjective] cabinet has narrowly voted to reject our proposal. The official response notes that an alliance between [From.GetNameDef] and [This.GetNameDef] would inevitably commit [From.GetNameDef] to defend countries which it had deliberately decided not to tie itself to. While we are, of course, free to choose our own foreign policy, it continues, we should not expect [From.GetNameDef] to come to our aid should we be drawn into a larger conflict."
  lar_fra_join_the_ententes.3.a:0 "Short-sighted Fools!"
- LaR_france_vichy_notification_events.1.t:0 "Syria defects to [FRA.GetLeader]"
+ LaR_france_vichy_notification_events.1.t:0 "Levant defects to [FRA.GetLeader]"
  LaR_france_vichy_notification_events.1.desc:0 "Following a direct appeal by [FRA.GetLeader], the governor of the territory has declared his allegience to the so-called "[FRA.GetAdjective] Government-in-Exile", headed by [FRA.GetLeader]. Our troops in the area have been asked to join [FRA.GetLeader]'s forces, but most have opted to be repatriated to our lines.\n\nNonethless, [FRA.GetLeader] is now in control of the region."
  LaR_france_vichy_notification_events.1.a:0 "Treason and Treachery!"
  LaR_france_vichy_notification_events.2.t:0 "Indochina defects to [FRA.GetLeader]"
@@ -1020,7 +1020,7 @@
  LaR_france_vichy_notification_events.4.t:0 "West Africa defects to [FRA.GetLeader]"
  LaR_france_vichy_notification_events.5.t:0 "North Africa defects to [FRA.GetLeader]"
  LaR_france_vichy_notification_events.6.t:0 "Madagascar defects to [FRA.GetLeader]"
- LaR_france_vichy_notification_events.7.t:0 "Pro-[FRA.GetLeader] coup in Syria"
+ LaR_france_vichy_notification_events.7.t:0 "Pro-[FRA.GetLeader] coup in Levant"
  LaR_france_vichy_notification_events.7.desc:0 "Forces loyal to [FRA.GetLeader] have staged a coup in the territory. Just before dawn, multiple armed groups, clearly under the orders of [FRA.GetLeader], seized strategic locations around the area to neutralize any coordinated attempts at resistance. By midday, they controlled all major population centers and have effectively seized control of the territory."
  LaR_france_vichy_notification_events.7.a:0 "What underhanded and un-BC methods!"
  LaR_france_vichy_notification_events.8.t:0 "Pro-[FRA.GetLeader] coup in Indochina"
