--- a/maddenist stuffs/localisation/english/lar_focus_l_english.yml
+++ b/maddenist stuffs/localisation/english/lar_focus_l_english.yml
@@ -649,8 +649,8 @@
  FRA_invest_in_west_africa_desc:0 "The vast reserves of workers and resources in western Africa make it a perfect candidate for investment."
  FRA_invest_in_indochina:0 "Invest In Indochina"
  FRA_invest_in_indochina_desc:0 "The long distance between our holdings in Indochina and our heartland may seem like a drawback, but it also protects any industry there from enemy attack."
- FRA_invest_in_syria:0 "Invest In Syria"
- FRA_invest_in_syria_desc:0 "Syria is perfectly positioned to supply us in case of a war in Europe or Africa. Enhancing its industrial potential will also support our position in the area."
+ FRA_invest_in_syria:0 "Invest In Levant"
+ FRA_invest_in_syria_desc:0 "Levant is perfectly positioned to supply us in case of a war in Europe or Africa. Enhancing its industrial potential will also support our position in the area."
  FRA_global_integration:0 "Global Integration"
  FRA_global_integration_desc:0 "The St Gloriana Empire is a finely-tuned system of mutually supporting parts. There is nothing saying that we can't do just as well with our colonies."
  FRA_begin_rearmament:0 "Begin Rearmament"
@@ -949,8 +949,8 @@
  FRA_intervention_in_north_africa_desc:0 "North Africa presents the best possible staging ground for an invasion to retake the homeland. Turning it to our side is vital for our campaign of liberation."
  FRA_intervention_in_west_africa:0 "Intervention In West Africa"
  FRA_intervention_in_west_africa_desc:0 "West Africa holds untold millions of inhabitants, who can be drafted into a new army to take back our homelands."
- FRA_intervention_in_syria:0 "Intervention In Syria"
- FRA_intervention_in_syria_desc:0 "Denying the enemy the strategic territories in Syria protects the Suez canal and dramatically improves our situation in the eastern Mediterranean."
+ FRA_intervention_in_syria:0 "Intervention In Levant"
+ FRA_intervention_in_syria_desc:0 "Denying the enemy the strategic territories in Levant protects the Suez canal and dramatically improves our situation in the eastern Mediterranean."
  FRA_intervention_in_indochina:0 "Intervention In Indochina"
  FRA_intervention_in_indochina_desc:0 "Far away from the fighting in Europe, our colonies in Indochina are an ideal area to help us defend our interests in the region."
  FRA_intervention_in_central_africa:0 "Intervention In Central Africa"
