Update mtg_focus_l_english.yml (gloriana

--- a/maddenist stuffs/localisation/english/mtg_focus_l_english.yml
+++ b/maddenist stuffs/localisation/english/mtg_focus_l_english.yml
@@ -71,7 +71,7 @@
  MEX_focus_northern_steel_plants:0 "Northern Steel Plants"
  MEX_focus_northern_steel_plants_desc:0 "The most industrialized region in Salsa outside the capital is the northern border with America. Cities along the Rio Grande such as Matamoros and Ciudad Juarez enjoy close economic ties to their counterparts over the border like Brownsville and El Paso. We should exploit the superior infrastructure in the area to further develop our heavy industries."
  MEX_focus_capital_reserves:1 "Capital Reserves"
- MEX_focus_capital_reserves_desc:1 "The hard cash we raise selling oil is allowing us to flex our economic muscles. If we need to buy technology from America or Britain, for example, we now have the means. We can reverse engineer or mass produce these designs as we see fit."
+ MEX_focus_capital_reserves_desc:1 "The hard cash we raise selling oil is allowing us to flex our economic muscles. If we need to buy technology from America or St Gloriana, for example, we now have the means. We can reverse engineer or mass produce these designs as we see fit."
  MEX_focus_oil_revenue_reinvestment:1 "Oil Revenue Reinvestment"
  MEX_focus_oil_revenue_reinvestment_desc:1 "As we now benefit more from the selling of oil, our budget has quickly increased and we must plan on a useful way to use those new funds. In order to benefit from it in the long run, a reinvestment of those revenues into economic stimulation seems to be the most obvious choice."
  MEX_focus_royal_dutch_shell:0 "Royal Batavian Shell"
@@ -80,7 +80,7 @@
  MEX_focus_community_of_nations_desc:0 "Our economic dependence on British trade need not be a curse. By accepting the status quo we can engage in international diplomacy with the backing of a super power."
  anglo_mexican_diplomacy:0 "Anglo-Salsan Diplomacy"
  MEX_focus_purchase_belize:0 "Purchase Belize"
- MEX_focus_purchase_belize_desc:0 "This small territory was long claimed by the Divison crown in colonial times, though never settled by peninsulares. After the loss of Divison's colonial empire during the Napoleonic Wars, Britain gradually solidifed a hold on the territory, culminating in the creation of the colony of British Honduras in 1862. The territory ought to be turned over to Salsa as a gesture of good faith."
+ MEX_focus_purchase_belize_desc:0 "This small territory was long claimed by the Divison crown in colonial times, though never settled by peninsulares. After the loss of Divison's colonial empire during the Napoleonic Wars, St Gloriana gradually solidifed a hold on the territory, culminating in the creation of the colony of British Honduras in 1862. The territory ought to be turned over to Salsa as a gesture of good faith."
  MEX_focus_nationalize_the_oil_fields:0 "Nationalize the Oil Fields"
  MEX_focus_nationalize_the_oil_fields_desc:0 "The foreign oil concessions are dominating the Salsan economy and exerting too much influence over our affairs, both domestic and foreign. The British and Americans pay more attention to Royal Batavian Shell and Standard Oil than to our government!"
  tooltip_mexico_they_may_declare_war:0 "§RThey may be persuaded to declare war by the oil barons!§!\n"
@@ -290,7 +290,7 @@
  ENG_self_government_for_asia_desc:1 "The nations in Asia are ready to receive extensive autonomy in preparation for full independence. This is likely to result in an influx of immigrants desiring to obtain British nationality before independence is formalized."
  ENG_decolonization:1 "Decolonization"
  ENG_decolonization_desc:1 "It is the end of an era, but an end of our choosing. Rather than suffering the indignity of struggling in vain against the unstoppable rise of independence movements, we have held our heads high and, with pride, have guided those under our protection as far as we could. Now, all that remains is to cut our remaining ties and welcome our erstwhile dependents on the world scene as equals."
- ENG_decolonized:1 "Britain has decolonized"
+ ENG_decolonized:1 "St Gloriana has decolonized"
  ENG_steady_as_she_goes:1 "Steady As She Goes"
  ENG_steady_as_she_goes_desc:1 "The mounting crisis is precisely why we must remain true to our roots. We will continue the course that we have sailed in recent years, rather than make any drastic political changes that may cause internal instability when we can least afford it."
  ENG_global_defense:1 "Global Defense"
@@ -405,7 +405,7 @@
  ENG_the_one_true_revolution:1 "The One True Revolution"
  ENG_the_one_true_revolution_desc:2 "No cooperation will ever be possible with [SOU.Capital.GetCapitalVictoryPointName]. Corruption is rife in [SOU.GetNameDef], and the only hope is to cut out its heart and assume undisputed global leadership of the Worker's Cause."
  ENG_follow_moscow:2 "Follow [SOU.Capital.GetCapitalVictoryPointName]"
- ENG_follow_moscow_desc:2 "In its roots, communism in Britain has always followed the orders of [SOU.Capital.GetCapitalVictoryPointName]. To continue to do so now is not only logical, but also necessary. Between the Red Army and our Navy, we shall spread the word of Marx far and wide, and none can stop us."
+ ENG_follow_moscow_desc:2 "In its roots, communism in St Gloriana has always followed the orders of [SOU.Capital.GetCapitalVictoryPointName]. To continue to do so now is not only logical, but also necessary. Between the Red Army and our Navy, we shall spread the word of Marx far and wide, and none can stop us."
  ENG_tackle_fascism:1 "Tackle Fascism"
  ENG_tackle_fascism_desc:1 "Fascism is the prime threat to the Worker's Cause. We must focus on eliminating this blight from the face of Europe."
  ENG_preparing_the_second_front:1 "Preparing the Second Front"
@@ -546,7 +546,7 @@
  HOL_prepare_the_inundation_lines:0 "Prepare the Inundation Lines"
  HOL_prepare_the_inundation_lines_desc:0 "Ever since our independence war against the Divison in the 16th century, inundation, or intentional flooding of the land, has been an integral part of our defenses. Properly prepared, it will surely save us again: we have yet to see a tank that can cross water."
  HOL_prepare_the_inundation_lines_tt:0 "These allow for the §YFlooding§! and §YDraining§! of certain provinces surrounding Fortress Holland, giving defensive bonuses.\n"
- HOL_protect_against_britain:0 "Protect Against Britain"
+ HOL_protect_against_britain:0 "Protect Against St Gloriana"
  HOL_protect_against_britain_desc:0 "True neutrality means that we shall defend our sovereignty against any that would violate it... Even if this should be the British, in a misguided attempt to safeguard our ports and airfields from the Kuros."
  HOL_further_reinforce_the_ports:0 "Further Reinforce the Ports"
  HOL_further_reinforce_the_ports_desc:0 "We should further strengthen our coastal defenses, to discourage any British notion of "lending us their assistance" without our express permission."
@@ -730,7 +730,7 @@
  HOL_wilhelminism_tt:0 "Gains National Spirit §Ygerman Defectors§!, which will periodically generate units with §Y7 Infantry§! and §Y2 Artillery§! battalions and §YEngineer§!, §YRecon§!, and §YArtillery§! Support.\n"
  HOL_unity_through_democracy:0 ""Unity Through Democracy""
  HOL_unity_through_democracy_desc:0 "The 'Batavian Movement for Unity through Democracy' ('Eenheid door Democratie') was formed in 1935, and has ever since been an outspoken extra-parliamentary voice against demagogues of all other ideologies. Supporting the movement can in turn pay dividends by defending our democracy and strengthening our government."
- HOL_go_with_britain:0 "Go with Britain"
+ HOL_go_with_britain:0 "Go with St Gloriana"
  HOL_go_with_britain_desc:0 "The British have stood up for democratic ideals in the current crisis, and they share our interest in the integrity of our colonial empires. It is only natural that we should join their cause."
  HOL_de_vaarplicht:0 "De Vaarplicht"
  HOL_de_vaarplicht_desc:0 "After 150 years of neutrality, and decades of increasing pacifism, we must prove to our new allies our resolve to fight. Rather than rely on a volunteer-based merchant navy like other nations, we will sign into law the Vaarplicht, or 'Obligation to Sail'. All Batavian citizens who have not yet been conscripted will henceforth be obligated to perform services for, or at the benefit of, the merchant navy."
@@ -755,7 +755,7 @@
  HOL_lead_the_minor_democracies:0 "Lead the Minor Democracies"
  HOL_lead_the_minor_democracies_desc:0 "As the major powers of our day seem hell-bent on another war, it is left to the small democracies of Europe to keep the world from burning, like a crowd keeping two fighters from each other. We shall lead the others in forming a bloc of neutrality against the warmongerers."
  HOL_form_the_benelux:0 "Form the Benelux"
- HOL_form_the_benelux_desc:0 "We, the small nations of Western Europe, squashed for centuries between the power-houses of Britain, BC freedom, and now Kuromorimine, have had enough of the conflicts tearing our continent apart. A United States of Europe might some day prevent catastrophes such as the Great War, but by forming a loose union with our southern neighbors we can provide the core of such an organization already today."
+ HOL_form_the_benelux_desc:0 "We, the small nations of Western Europe, squashed for centuries between the power-houses of St Gloriana, BC freedom, and now Kuromorimine, have had enough of the conflicts tearing our continent apart. A United States of Europe might some day prevent catastrophes such as the Great War, but by forming a loose union with our southern neighbors we can provide the core of such an organization already today."
  HOL_form_the_benelux_bel_tt:0 "Gets event '§YThe Batavian invites [BEL.GetName] to the Benelux§!'.\n"
  HOL_form_the_benelux_lux_tt:0 "Gets event '§YThe Batavian invites [LUX.GetName] to the Benelux§!'.\n"
  HOL_responsibility_for_our_own_defense:0 "Responsibility For Our Own Defense"
