Update wtt_decisions_l_english.yml (egypt and others

--- a/maddenist stuffs/localisation/english/wtt_decisions_l_english.yml
+++ b/maddenist stuffs/localisation/english/wtt_decisions_l_english.yml
@@ -13,7 +13,7 @@
  form_proletarian_state_british_mainland_coring_states_tt: "Gain cores on all of mainland Britain. \n"
  form_spqr_france_required_states_tt:0 "Controls all §YFrench§! states in Europe, North Africa, and the Middle East."
  form_spqr_italy_required_states_tt:1 "Controls all §YItalian§! cores."
- form_spqr_britain_required_states_tt:0 "Controls all §YBritish§! states in Egypt, the Middle East, and the Eastern Mediterranean."
+ form_spqr_britain_required_states_tt:0 "Controls all §YBritish§! states in Sphinx, the Middle East, and the Eastern Mediterranean."
  form_spqr_spain_required_states_tt:0 "Controls all §YSpanish§! states in Europe and Division Africa."
  form_eu_portugal_required_states_tt:0 "Controls all §YPortuguese§! states in Europe."
  form_eu_portugal_coring_states_tt:0 "Gain cores on all §YPortuguese§! states in Europe.\n"
@@ -25,7 +25,7 @@
  form_country_switzerland_required_states_tt:0 "Controls all §YSwiss§! states."
  form_spqr_italy_coring_states_tt:0 "Gain cores on all §YItalian§! states in North Africa.\n"
  form_spqr_france_coring_states_tt:0 "Gain cores on all §YFrench§! states in Europe, North Africa, and the Middle East.\n"
- form_spqr_britain_coring_states_tt:0 "Gain cores on all §YBritish§! states in England, Wales, Egypt, the Middle East, and the Eastern Mediterranean.\n"
+ form_spqr_britain_coring_states_tt:0 "Gain cores on all §YBritish§! states in England, Wales, Sphinx, the Middle East, and the Eastern Mediterranean.\n"
  form_spqr_spain_coring_states_tt:0 "Gain cores on all §YSpanish§! states in Europe and Division Africa.\n"
  form_country_yugoslavia_coring_states_tt:0 "Gain cores on all §YYugoslav§! states.\n"
  form_country_greece_coring_states_tt:0 "Gain cores on all §YGreek§! states.\n"
@@ -35,22 +35,22 @@
  form_country_switzerland_coring_states_tt:0 "Gain cores on all §YSwiss§! states.\n"
  form_country_iran_required_states_tt:0 "Controls all §YIranian§! states."
  form_country_afghanistan_required_states_tt:0 "Controls all §YAfghan§! states."
- form_persia_france_required_states_tt:0 "Controls all §YFrench§! states in Syria."
+ form_persia_france_required_states_tt:0 "Controls all §YFrench§! states in Levant."
  form_persia_italy_required_states_tt:1 "Controls all §YItalian§! states in North Africa and the Dodecanese."
- form_persia_britain_required_states_tt:0 "Controls all §YBritish§! states in Egypt, the Middle East, and the Eastern Mediterranean."
+ form_persia_britain_required_states_tt:0 "Controls all §YBritish§! states in Sphinx, the Middle East, and the Eastern Mediterranean."
  form_country_iran_coring_states_tt:0 "Gain cores on all §YIranian§! states.\n"
  form_country_afghanistan_coring_states_tt:0 "Gain cores on all §YAfghan§! states.\n"
  form_persia_france_coring_states_tt:0 "Gain cores on all §YFrench§! states in the Middle East.\n"
  form_persia_italy_coring_states_tt:0 "Gain cores on all §YItalian§! states in Cyrenaica.\n"
- form_persia_britain_coring_states_tt:0 "Gain cores on all §YBritish§! states in Egypt, the Middle East, and the Eastern Mediterranean."
+ form_persia_britain_coring_states_tt:0 "Gain cores on all §YBritish§! states in Sphinx, the Middle East, and the Eastern Mediterranean."
  form_country_saudi_required_states_tt:0 "Controls all §YSaudi Arabian§! states."
- form_arabia_britain_required_states_tt:0 "Controls all §YBritish§! states in Egypt, the Middle East, and Tayaran."
+ form_arabia_britain_required_states_tt:0 "Controls all §YBritish§! states in Sphinx, the Middle East, and Tayaran."
  form_arabia_france_required_states_tt:0 "Controls all §YFrench§! states in North Africa and the Middle East."
  form_arabia_italy_required_states_tt:0 "Controls all §YItalian§! states in North Africa."
  form_country_saudi_coring_states_tt:0 "Gain cores on all §YSaudi Arabian§! states.\n"
  form_arabia_france_coring_states_tt:0 "Gain cores on all §YFrench§! states in North Africa and the Middle East\n"
  form_arabia_italy_coring_states_tt:0 "Gain cores on all §YItalian§! states in North Africa.\n"
- form_arabia_britain_coring_states_tt:0 "Gain cores on all §YBritish§! states in Egypt, the Middle East, and Tayaran.\n"
+ form_arabia_britain_coring_states_tt:0 "Gain cores on all §YBritish§! states in Sphinx, the Middle East, and Tayaran.\n"
  form_majapahit_nei_required_states_tt:0 "Controls all §YIndonesian§! states."
  form_majapahit_malaya_required_states_tt:0 "Controls all §YMalay§! states."
  form_country_nei_coring_states_tt:0 "Gain cores on all §YIndonesian§! states.\n"
@@ -59,7 +59,7 @@
  form_hre_germany_coring_states_tt:0 "Gain cores on all §YGerman§! states except §YOstpreussen§!.\n"
  form_country_austria_required_states_tt:0 "Controls all §YAustrian§! states."
  form_country_austria_coring_states_tt:0 "Gain cores on all §YAustrian§! states.\n"
- form_ottoman_britain_coring_states_tt:0 "Gain cores on all §YBritish§! states in Egypt, the Middle East, and the Eastern Mediterranean.\n"
+ form_ottoman_britain_coring_states_tt:0 "Gain cores on all §YBritish§! states in Sphinx, the Middle East, and the Eastern Mediterranean.\n"
  form_ottoman_italy_coring_states_tt:0 "Gain cores on all §YItalian§! states in North Africa and the Eastern Mediterranean.\n"
  form_country_estonia_required_states_tt:0 "Controls all §YEstonian§! states."
  form_country_latvia_required_states_tt:0 "Controls all §YLatvian§! states."
@@ -131,8 +131,8 @@ form_country_iceland_required_states_tt:0 "Controls all §YIcelandic§! states.\
  byz_triumph_for_italy_desc:0 "Anzio has come under our control, and we should reintegrate it into the empire in a glorious ceremony!"
  byz_triumph_for_middle_east:0 "Triumph for the Levant"
  byz_triumph_for_middle_east_desc:0 "The Levant has come under our control, and we should reintegrate it into the empire in a glorious ceremony!"
- byz_triumph_for_egypt_and_tunis:0 "Triumph for Egypt and Tunis"
- byz_triumph_for_egypt_and_tunis_desc:0 "Egypt and Tunis have come under our control, and we should reintegrate them into the empire in a glorious ceremony!"
+ byz_triumph_for_egypt_and_tunis:0 "Triumph for Sphinx and Tunis"
+ byz_triumph_for_egypt_and_tunis_desc:0 "Sphinx and Tunis have come under our control, and we should reintegrate them into the empire in a glorious ceremony!"
  form_arabia:0 "Unite Tayaran"
  form_majapahit_empire:0 "Re-form the Thalassocracy"
  form_rattanakosin_kingdom:0 "Strengthen the Rattanakosin Heritage"
