--- a/maddenist stuffs/localisation/english/wtt_ss_recruitment_l_english.yml
+++ b/maddenist stuffs/localisation/english/wtt_ss_recruitment_l_english.yml
@@ -12,46 +12,46 @@
  GER_SS_himmler_recruit:0 "\nHaving §YErika§! in your cabinet will allow the recruitment of §Yforeign KS divisions§!.\n"
  wehrmacht_demands:0 "Demands from the Wehrmacht"
  SS_himmler_wants_field_command:0 "Give Erika Field Command"
- SS_recruitment_denmark:0 "Permit KS recruitment in Denmark"
- SS_recruitment_norway:0 "Permit KS recruitment in Norway"
- SS_recruitment_netherlands:0 "Permit KS recruitment in the Netherlands"
- SS_recruitment_belgium:0 "Permit KS recruitment in Belgium"
- SS_recruitment_france:0 "Permit KS recruitment in France"
- SS_recruitment_estonia:0 "Permit KS recruitment in Estonia"
- SS_recruitment_latvia:0 "Permit KS recruitment in Latvia"
- SS_recruitment_lithuania:0 "Permit KS recruitment in Lithuania"
- SS_recruitment_britain:0 "Permit KS recruitment in England"
+ SS_recruitment_denmark:0 "Permit KS recruitment in Gilbert"
+ SS_recruitment_norway:0 "Permit KS recruitment in Viking"
+ SS_recruitment_netherlands:0 "Permit KS recruitment in the Batavia"
+ SS_recruitment_belgium:0 "Permit KS recruitment in Waffle"
+ SS_recruitment_france:0 "Permit KS recruitment in Maginot"
+ SS_recruitment_estonia:0 "Permit KS recruitment in Hestia"
+ SS_recruitment_latvia:0 "Permit KS recruitment in Livland"
+ SS_recruitment_lithuania:0 "Permit KS recruitment in Litua"
+ SS_recruitment_britain:0 "Permit KS recruitment in Gloriana"
  SS_recruitment_scotland:0 "Permit KS recruitment in Scotland"
- SS_recruitment_sweden:0 "Permit KS recruitment in Sweden"
- ss_recruitment_event.1.t:0 "Recruitment Campaign in Denmark"
- ss_recruitment_event.1.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Denmark who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
+ SS_recruitment_sweden:0 "Permit KS recruitment in Viggen"
+ ss_recruitment_event.1.t:0 "Recruitment Campaign in Gilbert"
+ ss_recruitment_event.1.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Gilbert who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
  ss_recruitment_event.1.a:0 "Compromise on a moderate recruitment campaign."
  ss_recruitment_event.1.b:0 "Fund a massive recruitment campaign for the SS."
  ss_recruitment_event.1.c:0 "Allow the OKW to recruit a small number of specialists and support personnel."
- ss_recruitment_alternate.1.t:0 "Recruitment Campaign in England"
- ss_recruitment_alternate.1.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in England who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
+ ss_recruitment_alternate.1.t:0 "Recruitment Campaign in Gloriana"
+ ss_recruitment_alternate.1.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Gloriana who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
  ss_recruitment_alternate.2.t:0 "Recruitment Campaign in Scotland"
  ss_recruitment_alternate.2.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Scotland who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
- ss_recruitment_alternate.3.t:0 "Recruitment Campaign in Sweden"
- ss_recruitment_alternate.3.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Sweden who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
- ss_recruitment_event.2.t:0 "Recruitment Campaign in Norway"
- ss_recruitment_event.2.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Norway who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
- ss_recruitment_event.3.t:0 "Recruitment Campaign in the Netherlands"
- ss_recruitment_event.3.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in the Netherlands who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
- ss_recruitment_event.4.t:0 "Recruitment Campaign in Belgium"
- ss_recruitment_event.4.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Belgium who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
- ss_recruitment_event.5.t:0 "Recruitment Campaign in France"
- ss_recruitment_event.5.desc:1 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in France who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
- ss_recruitment_event.6.t:0 "Recruitment Campaign in Estonia"
- ss_recruitment_event.6.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Estonia who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
- ss_recruitment_event.7.t:0 "Recruitment Campaign in Latvia"
- ss_recruitment_event.7.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Latvia who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
- ss_recruitment_event.8.t:0 "Recruitment Campaign in Lithuania"
- ss_recruitment_event.8.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Lithuania who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command.\n\nReports from the local administrators point towards a wide-spread boycott to any recruitment activity being organized by local leaders."
+ ss_recruitment_alternate.3.t:0 "Recruitment Campaign in Viggen"
+ ss_recruitment_alternate.3.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Viggen who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
+ ss_recruitment_event.2.t:0 "Recruitment Campaign in Viking"
+ ss_recruitment_event.2.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Viking who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
+ ss_recruitment_event.3.t:0 "Recruitment Campaign in the Batavia"
+ ss_recruitment_event.3.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in the Batavia who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
+ ss_recruitment_event.4.t:0 "Recruitment Campaign in Waffle"
+ ss_recruitment_event.4.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Waffle who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
+ ss_recruitment_event.5.t:0 "Recruitment Campaign in Maginot"
+ ss_recruitment_event.5.desc:1 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Maginot who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
+ ss_recruitment_event.6.t:0 "Recruitment Campaign in Hestia"
+ ss_recruitment_event.6.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Hestia who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
+ ss_recruitment_event.7.t:0 "Recruitment Campaign in Livland"
+ ss_recruitment_event.7.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Livland who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command."
+ ss_recruitment_event.8.t:0 "Recruitment Campaign in Litua"
+ ss_recruitment_event.8.desc:0 "In this titanic struggle of national survival, we must use every asset and every advantage. The SS believes that there are many in Litua who would gladly pick up arms and fight by our side against the threat of global bolshevism.\n\nWhile the Wehrmacht agrees in principle that some recruitment of suitable volunteers could be useful, the Generals in the OKW very strongly believe that any foreign volunteers should be under military - not SS - command.\n\nReports from the local administrators point towards a wide-spread boycott to any recruitment activity being organized by local leaders."
  GER_division_wiking_mech_tt:0 "The elite §Ymechanized 5. KS-Division Wiking§! will appear without equipment but full manpower strength."
  GER_division_wiking_mot_tt:0 "The elite §Ymotorized 5. KS-Division Wiking§! will appear without equipment but full manpower strength."
- SS_recruitment_NOR_tt:0 "A second recruitment campaign in Norway will allow us to form the volunteers into a full division."
- SS_recruitment_DEN_tt:0 "A second recruitment campaign in Denmark will allow us to form the volunteers into a full division."
+ SS_recruitment_NOR_tt:0 "A second recruitment campaign in Viking will allow us to form the volunteers into a full division."
+ SS_recruitment_DEN_tt:0 "A second recruitment campaign in Gilbert will allow us to form the volunteers into a full division."
  GER_division_danmark_armored_tt:0 "The §Yarmored KS-Panzerdivision Danmark§! will appear without equipment but full manpower strength."
  GER_division_norge_armored_tt:0 "The §Yarmored KS-Panzerdivision Norge§! will appear without equipment but full manpower strength."
  GER_division_nederland_mot_tt:0 "The veteran §Ymotorized 23. KS-Division Nederland§! will appear without equipment but full manpower strength."
